# libbitcoin-sqlite-task

./: CMakeLists.txt  README.md  main.cpp  people.csv  program_output.txt
